--- a/artifacts/channel/configtx.yaml
+++ b/artifacts/channel/configtx.yaml
@@ -213,8 +213,8 @@ Orderer: &OrdererDefaults
         Consenters:
         - Host: orderer.fabcar.example.com
           Port: 3050
-          ClientTLSCert: crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-          ServerTLSCert: crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+          ClientTLSCert: crypto-config/ordererOrganizations/example.com/orderers/orderer.fabcar.example.com/tls/server.crt
+          ServerTLSCert: crypto-config/ordererOrganizations/example.com/orderers/orderer.fabcar.example.com/tls/server.crt
 
     Addresses:
         - orderer.fabcar.example.com:fabcar
@@ -332,8 +332,8 @@ Profiles:
                   ServerTLSCert: crypto-config/ordererOrganizations/example.com/orderers/ orderer2.fabcar.example.com/tls/server.crt
                 - Host: orderer3.fabcar.example.com
                   Port: 6050
-                  ClientTLSCert: crypto-config/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
-                  ServerTLSCert: crypto-config/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
+                  ClientTLSCert: crypto-config/ordererOrganizations/example.com/orderers/orderer3.fabcar.example.com/tls/server.crt
+                  ServerTLSCert: crypto-config/ordererOrganizations/example.com/orderers/orderer3.fabcar.example.com/tls/server.crt
                 # - Host: orderer4.example.com
                 #   Port: 10050
                 #   ClientTLSCert: crypto-config/ordererOrganizations/example.com/orderers/orderer4.example.com/tls/server.crt
